--- a/horarios.html
+++ b/horarios.html
@@ -9,7 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      background-color: #f8f8f8;
+      background: linear-gradient(120deg, #f9f9f9, #b8c6ff);
     }
     .container {
       max-width: 500px;
